k8s-layer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend-ingress
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: lb
spec:
    rules:
      - http:
            paths:
              - path: /
                backend:
                    service:
                      name: frontend-service
                      port:
                        number: 80
